@@ -1,4 +1,4 @@
-.TH SCANCEL "1" "April 2009" "scancel 2.0" "Slurm components"
+.TH SCANCEL "1" "January 2011" "scancel 2.2" "Slurm components"
 
 .SH "NAME"
 scancel \- Used to signal jobs or job steps that are under the control of Slurm.
@@ -55,13 +55,18 @@ Restrict the scancel operation to jobs with this job name.
 Restrict the scancel operation to jobs in this partition.
 
 .TP
-\fB\-p\fR, \fB\-\-qos\fR=\fIqos\fR
+\fB\-q\fR, \fB\-\-qos\fR=\fIqos\fR
 Restrict the scancel operation to jobs with this quality of service.
 
 .TP
 \fB\-Q\fR, \fB\-\-quiet\fR
 Do not report an error if the specified job is already completed.
 This option is incompatible with the \fB\-\-verbose\fR option.
+
+
+.TP
+\fB\-R\fR, \fB\-\-reservation\fR=\fIreservation_name\fR
+Restrict the scancel operation to jobs with this reservation name.
 
 .TP
 \fB\-s\fR, \fB\-\-signal\fR=\fIsignal_name\fR
@@ -215,7 +220,7 @@ scancel \-\-state=PENDING \-\-user=bob \-\-partition=debug
 
 .SH "COPYING"
 Copyright (C) 2002-2007 The Regents of the University of California.
-Copyright (C) 2008-2009 Lawrence Livermore National Security.
+Copyright (C) 2008-2011 Lawrence Livermore National Security.
 Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
 CODE\-OCEC\-09\-009. All rights reserved.
 .LP
